[project]
name = "mast-evaluator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic[vertex]>=0.79.0",
    "openai>=2.21.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.setuptools]
packages = ["mast"]

[tool.setuptools.package-data]
"*" = ["*.txt"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require OPENAI_API_KEY)",
]

[tool.uv.workspace]
members = [
    "experiments/tau2_agent",
]
