[project]
name = "tau2-agent"
version = "0.1.0"
description = "Evaluate GPT-4.1-mini on tau2-airline benchmark"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tau2 @ git+https://github.com/sierra-research/tau2-bench.git",
    "openai>=2.21.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.3.0",
]
